Change log for zeit.web
=======================

2.22 (unreleased)
-----------------

- ZON-606: Add community states

- FIX: Deduplicate Automatic Gallery Areas

- FIX: Repair deduped pagination for gallery areas

- MAINT: Plug in jinja finalizer to hide `None` expressions

- MAINT: Replace deprecated Bitblt with new image handling

- MAINT: Deprecate d11n for good.

- MAINT: Sass: Replace underscores in variable names


2.21 (2015-10-30)
-----------------

- FIX: Handle ressorts with umlauts (during ad-nextread lookup)

- ZON-2154: Prevent users from recommending their own comments

- ZON-2324: Add Studiumbox

- ZON-2327: Implement Jobbox with Dropdown


2.20 (2015-10-30)
-----------------

- ZON-2328: Add premoderation for new users

- ZON-2285: Identify if view is wrapped via user agent

- ZON-2206: Handle empty subressort DAV property properly

- MAINT: Fix bumpy chronological article navigation

- ZON-2051: Remove Grunticon from ZON and use SVG sprites

- FIX: Handle multiple child nodes in rawxml CP modules


2.19 (2015-10-28)
-----------------

- MAINT: Reorganize article footer to fix margins and harmonize border-color

- ZON-2168: Link-Object teaser should point to target URL

- ZON-2167: Return correctly spelled ressort names to app wrapper

- ZON-2238: Allow duplicate hiding in automatic gallery area

- ZON-2342: ZEIT Shop Follow-Up

- ZON-2336: Prefix newsfeed item title with supertitle

- FIX: Make Jobbox square in 50/50


2.18 (2015-10-26)
-----------------

- ZON-2337: Exclude article lineage from ressort "administratives"

- FIX: Change number of jobs to be displayed in Jobbox

- FIX: Make Jobbox more failsave and multi instance ready

- FIX: Ignore image variants with unavailable parent groups

- FIX: Make Jobbox more failsave and multi instance ready


2.17 (2015-10-22)
-----------------

- ZON-2276: Fold/unfold comment replies

- ZON-2144: Add service link module (in fact add raw to centerpages)
